service-mesh/virtual-service-orders.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-cicd
  namespace: java-project
spec:
  hosts:
  - "*"
  gateways:
  - java-project-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: sonarqube-maven-example
        port:
          number: 8080
